# Projet-Devise

./: README.md  donnees.json  pyproject.toml  test.json
final/: __init__.py  __main__.py  lib_affichage.py  lib_dictionnaire.py  lib_donnees.py  lib_solution.py
htmlcov/: d_4473c0335209cf5a___init___py.html  d_4473c0335209cf5a___main___py.html  d_4473c0335209cf5a_lib_affichage_py.html  d_4473c0335209cf5a_lib_dictionnaire_py.html  d_4473c0335209cf5a_lib_donnees_py.html  d_4473c0335209cf5a_lib_solution_py.html  d_a44f0ac069e85531_Test_affichage_py.html  d_a44f0ac069e85531_Test_dictionnaire_py.html  d_a44f0ac069e85531_Test_donnees_py.html  d_a44f0ac069e85531_Test_final_py.html  d_a44f0ac069e85531_Test_solution_py.html  d_a44f0ac069e85531___init___py.html  index.html  status.json
tests/: Test_affichage.py  Test_dictionnaire.py  Test_donnees.py  Test_solution.py
